--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dbDev": "json-server db.json ",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
