--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "dbDev":"npx json-server --watch db.json --port 3000"
+    "dbDev": "npx json-server --watch db.json --port 3000"
   },
   "dependencies": {
     "axios": "^1.8.3",
+    "dotenv": "^16.4.7",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/node": "^22.14.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
