--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.0",
     "sweetalert2": "^11.17.2",
     "uuid": "^11.1.0",
     "zustand": "^5.0.3"
