--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "json-server": "^1.0.0-beta.3",
+    "lucide-react": "^0.488.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
